--- a/index.html
+++ b/index.html
@@ -15,8 +15,30 @@
         <img src="assets/images/logo.png" alt="logo">Love Maths
     
     
-        <div class="game-area">
+    <div class="game-area">
+        <div class="controls-area">
+            <button class="btn btn--big btn--green"> 
+                <i class="fas fa-plus"></i>
+            </button>
+            <button class="btn btn--big btn--blue">
+                <i class="fas fa-minus"></i>
+            </button>
+            <button class="btn btn--big btn--green">
+                <i class="fas fa-times"></i>
+            </button>
+            <button class="btn btn--big btn--red">
+                <i class="fas fa-divide"></i>
+            </button>
 
+            <div class="question-area">
+                <span id="operand1">0</span>
+                <span id="operator">x</span>
+                <span id="operand2">0</span>
+                <span>=</span>
+                <p class="answer-message">Enter Answer:</p>
+                <input type="number" id="answer-box">
+                <button class="btn btn--gray">Sumbit Answer</button>
+            </div>
     </div>
 
     <div class="score-area">
